--- a/flask_app/static/css/recipes.css
+++ b/flask_app/static/css/recipes.css
@@ -6,15 +6,62 @@
 }
 
 .recipes_bg{
-    height: 50svh;
+    height: 55svh;
     width: 100svw;
-    background: url(../imgs/index_bg/pexels-roman-odintsov-5976082.jpg);
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 60%, rgb(236, 194, 140) 90%),  url(../imgs/index_bg/pexels-roman-odintsov-5976082.jpg);
     background-size: cover;
     background-position: center;
 
 }
 
 .recipes_top_info_container{
-    background: rgba(0.9176, 0.7686, 0.5922);
+    background: rgb(236, 194, 140);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 40svh;
+    width: 100svw;
+    padding: 0rem 1.5rem 5rem;
 }
 
+.recipes_top_info_container p {
+    font-size: 1rem;
+}
+
+.recipes_top_info_container h2{
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+
+/* =========== LANDSCAPE VIEW ============ */
+@media (orientation: landscape) and (max-height: 450px) and (max-width: 932px) {
+    body{
+        background: rgb(21, 13, 0);
+    }
+    .recipes_top_container{
+        display: flex;
+        height: 100dvh;
+        flex-direction: row-reverse;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 1.5rem;
+    }
+
+    .recipes_bg, .recipes_top_info_container{
+        height: 100dvh;
+        display: flex;
+        margin: 0;
+        width: 65dvw;
+        padding: 1rem;
+    }
+    .recipes_top_info_container{
+        width: 35dvw;
+    }
+    .recipes_bg{
+        background: linear-gradient(to left, rgba(255, 255, 255, 0) 60%, rgb(236, 194, 140) 90%),  url(../imgs/index_bg/pexels-roman-odintsov-5976082.jpg);
+        background-size: cover;
+        background-position: center;
+
+    }
+}
