--- a/flask_app/static/css/style_mobile.css
+++ b/flask_app/static/css/style_mobile.css
@@ -7,10 +7,10 @@
 }
 *:not(.stars, .stars_rate){
     word-spacing: 1px;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+    font-family:Arial, Helvetica, sans-serif;
 }
 
-html,.home_container{
+html,.home_container, body{
     background:rgb(21, 13, 0);
     overflow-x: hidden;
 }
